test/invalid-syntax/57163_const_not_that_many_types/not_that_many_types.mag
-- Author: 57163, Guilherme Dias

const variable : (Int, Int) = 10
